# neuroklea

./: .buildinfo  .pre-commit-config.yaml  AGENTS.md  CNAME  Readme.md  code-of-conduct.html  contributing.html  genindex.html  getting-help.html  glossary.html  index.html  install.html  objects.inv  py-modindex.html  requirements-dev.txt  requirements-docs.txt  requirements.txt  search.html  searchindex.js  ty.toml
.agents/: 2026-03-24.md  2026-03-25.md  2026-03-26.md  2026-03-31.md  2026-04-01.md  2026-04-07.md  2026-04-08.md  2026-04-14.md  2026-04-15.md  2026-04-16.md  2026-04-21.md  2026-06-03.md  2026-06-09.md  2026-06-11.md  2026-06-18.md  2026-06-20.md  2026-06-23.md  2026-06-24.md  2026-06-25.md  2026-06-29.md  2026-06-30.md  2026-07-01.md  Readme.md
.doctrees/: code-of-conduct.doctree  contributing.doctree  environment.pickle  getting-help.doctree  glossary.doctree  index.doctree  install.doctree
.doctrees/api/: index.doctree  klea_utils.doctree
.doctrees/cli/: index.doctree  klea-code.doctree  klea-rag-serve.doctree  klea-rag.doctree  klea-vs-create.doctree  nml-mcp.doctree
.doctrees/concepts/: index.doctree  rag.doctree
.doctrees/tutorials/: create-and-use-rag.doctree  index.doctree
.github/workflows/: ci.yml  docs.yml  python-publish.yml  python-publish.yml.notyet  ruff.yml
_modules/: index.html
_modules/klea_utils/: api.html  errors.html  llm.html  plogging.html  tools.html
_sources/: code-of-conduct.rst.txt  getting-help.rst.txt  index.rst.txt  install.rst.txt
_sources/api/: index.rst.txt
_sources/cli/: klea-rag-serve.rst.txt  klea-rag.rst.txt
_sources/tutorials/: create-and-use-rag.rst.txt  index.rst.txt
_static/: custom.css
api/: index.html  klea_utils.html
api/utils/: api.html  errors.html  graph.html  llm.html  plogging.html  stores.html  tools.html
cli/: index.html  klea-code.html  klea-rag-serve.html  klea-rag.html  klea-vs-create.html  nml-mcp.html
code_ai_pkg/: AGENTS.md  Readme.md  code_ai.env  mcp.json  setup.cfg
code_ai_pkg/neuroml_code_ai/: code_ai.py  config.py  schemas.py
code_pkg/: AGENTS.md  Readme.md  klea_code.env  setup.cfg
code_pkg/klea_code/: config.py  klea_code.py  schemas.py
code_pkg/klea_code/api/: chat.py  health.py  main.py
code_pkg/klea_code/nodes/: answer_user.py  evaluator.py  explore_planner.py  goal_setter.py  init_graph.py  planner.py  tools_caller.py  tools_picker.py  tools_router.py
code_pkg/klea_code/nodes/prompts/: ExplorePlanner_system.md  ExplorePlanner_user.md  GoalSetter_system.md  GoalSetter_user.md  Planner_system.md
code_pkg/klea_code/tools/: bundled.py
code_pkg/klea_code/ui/: cli.py  streamlit_ui.py
concepts/: index.html  rag.html
data-sources/neuroml/: jupyterbook2singlemd.py  nml.py
docs/: conf.py  contributing.rst  glossary.rst  index.rst  install.rst  make.bat
docs/api/: index.rst  klea_code.rst  klea_rag.rst  klea_utils.rst  neuroml_mcp.rst
docs/cli/: index.rst  klea-code.rst  klea-rag-serve.rst  klea-rag.rst  klea-vs-create.rst  (+1 more)
mcp_pkg/: AGENTS.md  Readme.md  pyproject.toml  setup.cfg
mcp_pkg/neuroml_mcp/: utils.py
mcp_pkg/neuroml_mcp/server/: app_lifespan.py  lifespan.py  main.py
mcp_pkg/neuroml_mcp/tools/: code_tools.py  neuroml_tools.py  web_tools.py
mcp_pkg/neuroml_mcp/tools/sandbox/: docker.py  local.py  sandbox.py
mcp_pkg/tests/: test_code_tools.py  test_mcp.py  test_neuroml_tools.py
neuroml_ai/: AGENTS.md  Readme.md  assistant.env  setup.cfg
rag_pkg/: AGENTS.md  MANIFEST.in  Readme.md  klea_rag.json  klea_rag_openworm.json  mcp.json  rag-hf-ow.env  rag-hf.env  rag.env  raggy.env  setup.cfg  vector-stores-tests.json  vector-stores.json
rag_pkg/gen_rag/: config.py  rag.py  schemas.py  stores.py
rag_pkg/gen_rag/api/: chat.py  health.py  main.py
rag_pkg/gen_rag/nodes/: answer_from_context.py  answer_user.py  base_node.py  classify_question.py  evaluator.py  generate_retrieval_query.py  init_rag.py  refuse_answer.py  retrieve_info.py  route_evaluator.py  route_query.py  tools_caller.py  tools_picker.py
rag_pkg/gen_rag/nodes/prompts/: ClassifyQuestion_system.md  Evaluator_system.md
rag_pkg/gen_rag/prompts/: GenerateRetrievalQuery_system.md
rag_pkg/gen_rag/ui/: cli.py  streamlit_ui.py
rag_pkg/klea_rag/: config.py  rag.py  schemas.py
rag_pkg/klea_rag/api/: chat.py  health.py  main.py  server.py
rag_pkg/klea_rag/nodes/: answer_from_context.py  answer_user.py  classify_question.py  evaluator.py  generate_retrieval_query.py  init_rag.py  retrieve_info.py  route_evaluator.py  route_query.py  tools_caller.py  tools_picker.py
rag_pkg/klea_rag/nodes/prompts/: AnswerFromContext_system.md  AnswerFromContext_user.md  Evaluator_user.md  GenerateRetrievalQuery_system.md  ToolsPicker_system.md
rag_pkg/klea_rag/ui/: cli.py  streamlit_ui.py
rag_pkg/tests/: test_stores.py
scripts/: ignore-vs-git-changes.sh  run_tests.sh
tutorials/: create-and-use-rag.html  index.html
utils_pkg/: AGENTS.md  MANIFEST.in  Readme.md  setup.cfg  vector-stores-tests.json
utils_pkg/klea_utils/: api.py  errors.py  llm.py  plogging.py  stores.py  tools.py
utils_pkg/klea_utils/graph/: base.py
utils_pkg/klea_utils/nodes/: abstract.py  answer_general.py  base.py  fixed_answer.py  guard.py  guard_router.py  summarise_memory.py
utils_pkg/klea_utils/nodes/prompts/: GuardNode_system.md  SummariseMemoryNode_system.md  SummariseMemoryNode_user.md
utils_pkg/klea_utils/stores/: __init__.py  config.py  ingestion.py  retrieval.py  utils.py
utils_pkg/klea_utils/ui/: __init__.py  vs_create.py
utils_pkg/neuroml_ai_utils/: api.py  errors.py  graph.py  llm.py  logging.py  nodes.py  stores.py  tools.py
utils_pkg/neuroml_ai_utils/graph/: base.py
utils_pkg/neuroml_ai_utils/nodes/: abstract.py  answer_from_context.py  answer_general.py  base.py  base_nodes.py  fixed_answer.py  guard.py  guard_router.py  summarise_memory.py
utils_pkg/neuroml_ai_utils/nodes/prompts/: AnswerFromContext_system.md  AnswerGeneral_system.md  GuardNode_user.md
utils_pkg/tests/: test_llm_utils.py  test_stores.py  test_stores_ingestion.py  test_stores_retrieval.py  test_tools_utils.py
(+56 files in other folders)
