[metadata]
name = klea_code
version = 0.0.1
author = Ankur Sinha
author_email = ankursinha@fedoraproject.org
url = https://github.com/NeuroML/neuroklea
project_urls =
    Documentation = https://neuroklea.org
    Source = https://github.com/NeuroML/neuroklea
license = GPL-3.0-or-later
description = AI assisted coding/workflow system
long_description = file: Readme.md
long_description_content_type = text/markdown
classifiers=
    Intended Audience :: Science/Research
    Natural Language :: English
    Operating System :: OS Independent
    Programming Language :: Python :: 3.12
    Programming Language :: Python :: 3.13
    Topic :: Scientific/Engineering

[options]
install_requires =
    klea_utils
    langchain
    langchain-core
    langchain-mcp-adapters
    typer
    yaspin
    fastapi[standard]
    streamlit

include_package_data = True
packages = find:

[options.packages.find]
where = .

[options.entry_points]
console_scripts =
    klea-code                = klea_code.ui.cli:code_app

[options.package_data]
klea_code =
    *.md

[options.extras_require]
test =
    pytest
    pytest-asyncio
    langchain-ollama

dev =
    klea_code[test]
    pre-commit
    isort
    ruff
    mypy


[flake8]
extend-ignore = E501, E502, F403, F405, W503, W504, E251
