[metadata]
name = klea_rag
version = 0.0.1
author = Ankur Sinha
author_email = ankursinha@fedoraproject.org
url = https://github.com/sanjayankur31/neuroml-ai
license = GPL-3.0-or-later
description = Generic RAG implementation
long_description = file: README.md
long_description_content_type = text/md
classifiers=
    Intended Audience :: Science/Research
    Natural Language :: English
    Operating System :: OS Independent
    Programming Language :: Python :: 3.12
    Programming Language :: Python :: 3.13
    Topic :: Scientific/Engineering

[options]
install_requires =
    neuroml_ai_utils
    langchain
    langchain[google-genai]
    langchain[ollama]
    langchain-core
    langchain-text-splitters
    langchain-community

include_package_data = True
packages = find:

[options.packages.find]
where = .

[options.package_data]

[options.entry_points]
console_scripts =
    klea-rag                = klea_rag.ui.cli:rag_app

[options.extras_require]
test =
    pytest
    pytest-asyncio

dev =
    klea_rag[test]
    pre-commit
    ruff
    isort
    mypy


[flake8]
extend-ignore = E501, E502, F403, F405, W503, W504, E251
