[metadata]
name = klea_rag
version = 0.0.1
author = Ankur Sinha
author_email = ankursinha@fedoraproject.org
url = https://github.com/NeuroML/neuroklea
project_urls =
    Documentation = https://neuroklea.org
    Source = https://github.com/NeuroML/neuroklea
license = GPL-3.0-or-later
description = Generic RAG implementation
long_description = file: Readme.md
long_description_content_type = text/markdown
classifiers=
    Intended Audience :: Science/Research
    Natural Language :: English
    Operating System :: OS Independent
    Programming Language :: Python :: 3.12
    Programming Language :: Python :: 3.13
    Topic :: Scientific/Engineering

[options]
install_requires =
    klea_utils
    langchain
    langchain-core
    typer
    yaspin
    fastapi[standard]
    fastmcp
    streamlit

include_package_data = True
packages = find:

[options.packages.find]
where = .

[options.package_data]

[options.entry_points]
console_scripts =
    klea-rag                = klea_rag.ui.cli:rag_app
    klea-rag-serve          = klea_rag.api.server:serve_app

[options.extras_require]
chroma =
    klea_utils[chroma]

pgvector =
    klea_utils[pgvector]

qdrant =
    klea_utils[qdrant]

full =
    klea_rag
    klea_rag[chroma]
    klea_rag[pgvector]
    klea_rag[qdrant]

test =
    pytest
    pytest-asyncio
    langchain-ollama

dev =
    klea_rag[full]
    pre-commit
    ruff
    isort
    mypy


[flake8]
extend-ignore = E501, E502, F403, F405, W503, W504, E251
