[metadata]
name = klea_utils
version = 0.0.1
author = Ankur Sinha
author_email = ankursinha@fedoraproject.org
url = https://github.com/NeuroML/neuroklea
license = GPL-3.0-or-later
description = RAG for NeuroML
long_description = file: README.md
long_description_content_type = text/md
classifiers=
    Intended Audience :: Science/Research
    Natural Language :: English
    Operating System :: OS Independent
    Programming Language :: Python :: 3.12
    Programming Language :: Python :: 3.13
    Topic :: Scientific/Engineering

[options]
install_requires =
    langchain
    langchain-core
    langchain-huggingface
    langgraph
    fastmcp
    httpx
    tenacity

include_package_data = True
packages = find:

[options.packages.find]
where = .

[options.entry_points]

[options.package_data]

[options.extras_require]
chroma =
    langchain-chroma
    chromadb

pgvector =
    langchain-postgres

qdrant =
    langchain-qdrant

full =
    klea_utils[chroma]
    klea_utils[pgvector]
    klea_utils[qdrant]

test =
    klea_utils[full]
    pytest
    pytest-asyncio
    pytest-xdist
    ollama

dev =
    klea_utils[test]
    pre-commit
    isort
    ruff
    mypy

[flake8]
extend-ignore = E501, E502, F403, F405, W503, W504, E251
